# DoRePi

./: CMakeLists.txt  README.md  build.sh  diagram.json  setup.sh  wokwi.toml
include/: buttons.h  display.h  notes.h  pins.h  sound.h
src/: buttons.c  main.c  notes.c  sound.c
